WIP: Implement element info extraction for constructors